2000-05-09  Matt Loper  <matt@helixcode.com>

	* calendar/pcs/cal-backend.c (cal_backend_add_cal): Return nothing
	for a 'void' function.

2000-05-08  Christopher James Lahey  <clahey@helixcode.com>

	* widget/e-text/e-text.c, widgets/e-text/e-text.h: Added an
	activate signal.

2000-05-06  Chris Toshok  <toshok@helixcode.com>
	
	* configure.in: Added new Directories section for the default_user.

2000-05-06  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Updated for the new `default_user' directory
	setup.

2000-05-06  Chris Toshok  <toshok@helixcode.com>

	* configure.in: check for purify.

2000-05-06  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.c, widgets/e-text/e-text.h: Added a
	"changed" signal that gets sent whenever the text changes.

2000-05-05  Ettore Perazzoli  <ettore@helixcode.com>

	* Added `--enable-purify' flag.

2000-05-05  Chris Toshok <toshok@helixcode.com>
	
	* shell/Makefile.am: add support for building purified evolution.

	* shell/.cvsignore: ignore evolution.pure

2000-05-05  Chris Toshok <toshok@helixcode.com>

	* addressbook/backend/ebook/.cvsignore,
	addressbook/contact-editor/.cvsignore,
	addressbook/gui/component/.cvsignore,
	addressbook/gui/minicard/.cvsignore,
	addressbook/printing/.cvsignore,
	calendar/cal-client/.cvsignore,
	calendar/gui/.cvsignore,
	calendar/pcs/.cvsignore,
	filter/.cvsignore,
	mail/.cvsignore,
	shell/.cvsignore,
	tests/.cvsignore,
	widgets/e-table/.cvsignore,
	widgets/e-text/.cvsignore,
	widgets/meeting-time-sel/.cvsignore,
	widgets/shortcut-bar/.cvsignore,
	wombat/.cvsignore: ignore the .pure directory

2000-05-04  Dan Winship  <danw@helixcode.com>

	* configure.in: Oops. The Kerberos check was succeeding when it
	shouldn't have (and thus breaking the pop3 build for "normal"
	people). Fix.

2000-05-03  Michael Meeks  <michael@helixcode.com>

	* configure.in (xmlversion): Fix to remove older 'libxml' prefix.

2000-05-02  Ettore Perazzoli  <ettore@helixcode.com>
