@@ -1,3 +1,8 @@
+2000-05-09  Christopher James Lahey  <clahey@helixcode.com>
+
+	* widgets/e-text/e-text.c: Remove the tooltip callback when
+	destroyed.
+
 2000-05-09  Matt Loper  <matt@helixcode.com>
 
 	* calendar/pcs/cal-backend.c (cal_backend_add_cal): Return nothing
